--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "mock": "json-server --watch db.json --port 3004"
+    "mock": "json-server --watch db.json --port 3004",
+    "serve": "node server.js env NODE_ENV=development"
   },
   "eslintConfig": {
     "extends": "react-app"
