--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: node_js
 node_js:
   - 14.16.1
-cache: npm
+cache: false
 
 install:
-  - yarn install
+  - npm ci
 
 script:
-  - yarn run build
+  - npm run build
 
 deploy:
   provider: pages
